--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@ body {
 <h1>你来错地方了</h1>
 <p>这是一个模板。</p>
 <p>Edit the code in the window to the left, and click "Run" to view the result.</p>
-<img src="avatar.png" alt="头像" style="width:200px">
+<img src="00019.png" alt="头像" style="width:200px">
 
 </body>
