更新 发布页面

--- a/illusion/release.html
+++ b/illusion/release.html
@@ -16,6 +16,6 @@ body {
 <h1>Illusion(CalCobalt VIP)</h1>
 <p>即将发布</p>
 <p>2023.10</p>
-<img src="illusion" alt="头像" style="width:200px">
+<img src="illusion" alt="封面" style="width:200px">
 
 </body>
