--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@ body {
 
 <h1>你来错地方了</h1>
 <p>这是一个模板。</p>
-<p>将于 5 秒后跳转至 网易云音乐 页面</p>
-<meta http-equiv="refresh" content="5;url=https://music.163.com/#/artist?id=50980005"> 
+<p>将于 15 秒后跳转至 网易云音乐 页面</p>
+<a href="https://music.163.com/#/artist?id=50980005">访问 网易云音乐 页面</a>
+<a href="https://github.com/calcobalt">访问 Github 页面</a>
+<meta http-equiv="refresh" content="15;url=https://music.163.com/#/artist?id=50980005"> 
 <img src="00019.png" alt="头像" style="width:200px">
 
 </body>
