--- a/illusion/release.html
+++ b/illusion/release.html
@@ -13,7 +13,7 @@ body {
 </head>
 <body>
 
-<h1>Illusion(CalCobalt VIP)</h1>
+<h1>Illusion(CalCobalt VIP) - 暂定</h1>
 <p>即将发布</p>
 <p>2023.10</p>
 <img src="illusion" alt="封面" style="width:200px">
