--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@ body {
 <p>将于 15 秒后跳转至 网易云音乐 页面</p>
 <a href="https://music.163.com/#/artist?id=50980005">访问 网易云音乐 页面</a>
 <a href="https://github.com/calcobalt">访问 Github 页面</a>
-<meta http-equiv="refresh" content="15;url=https://music.163.com/#/artist?id=50980005"> 
+<meta http-equiv="refresh" content="15;url=https://music.163.com/#/artist?id=50980005"> ‘
+<a></a>
 <img src="00019.png" alt="头像" style="width:200px">
 
 </body>
+<link rel="Shortcut Icon" href="github-mark-white.png" sizes="16x16" />
