--- a/index.html
+++ b/index.html
@@ -2,6 +2,22 @@
 <html>
 <head>
 <title>标题模版</title>
+<script>
+  function countDown(){
+    //获取初始时间
+    var time = document.getElementById("Time");
+    
+    //获取到id为time标签中的数字时间
+    if(time.innerHTML == 0){
+      //等于0时清除计时，并跳转该指定页面
+      window.location.href="https://music.163.com/#/artist?id=50980005";
+    }else{
+      time.innerHTML = time.innerHTML-1;
+    }
+  }
+  //1000毫秒调用一次
+  window.setInterval("countDown()",1000);
+</script>
 <style>
 body {
   background-color: black;
@@ -15,11 +31,10 @@ body {
 
 <h1>你来错地方了</h1>
 <p>这是一个模板。</p>
-<p>将于 15 秒后跳转至 网易云音乐 页面</p>
+<p>将于 <p id="Time" >30</p> 秒后跳转至 网易云音乐 页面</p>
 <a href="https://music.163.com/#/artist?id=50980005">访问 网易云音乐 页面</a>
 <a href="https://github.com/calcobalt">访问 Github 页面</a>
-<meta http-equiv="refresh" content="15;url=https://music.163.com/#/artist?id=50980005"> ‘
-<a></a>
+<a><br></a>
 <img src="00019.png" alt="头像" style="width:200px">
 
 </body>
