--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>标题模版</title>
+<title>标题</title>
 <script>
   function countDown(){
     //获取初始时间
@@ -30,7 +30,7 @@ body {
 <body>
 
 <h1>你来错地方了</h1>
-<p>这是一个模板。</p>
+<p>这是一种基于Github的（预）发布页面。。</p>
 <p>将于 <a id="Time" >30</a> 秒后跳转至 网易云音乐 页面</p>
 <a href="https://music.163.com/#/artist?id=50980005">访问 网易云音乐 页面</a>
 <a href="https://github.com/calcobalt">访问 Github 页面</a>
