--- a/index.html
+++ b/index.html
@@ -38,4 +38,4 @@ body {
 <img src="00019.png" alt="头像" style="width:200px">
 
 </body>
-<link rel="icon" href="./github-mark-white.png" sizes="16x16" />
+<link rel="icon" href="github-mark.ico" sizes="16x16" />
