--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="icon" href="github-mark.ico" sizes="16x16" type ="image/x-icon"/>
 <title>标题</title>
 <script>
   function countDown(){
@@ -36,5 +37,4 @@ body {
 <a href="https://github.com/calcobalt">访问 Github 页面</a>
 <a><br></a>
 <img src="00019.png" alt="头像" style="width:200px">
-<link rel="icon" href="github-mark.ico" sizes="16x16" />
 </body>
