--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="icon" href="github-mark.ico" sizes="16x16" type ="image/x-icon"/>
+<link rel="icon" href="github-mark.png"/>
 <title>标题</title>
 <script>
   function countDown(){
