--- a/index.html
+++ b/index.html
@@ -1,40 +1,66 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- 网页标题和图标 -->
 <link rel="icon" href="github-mark.png"/>
 <title>标题</title>
 <script>
+  // JavaScript 倒计时函数
   function countDown(){
-    //获取初始时间
+    // 获取初始时间
     var time = document.getElementById("Time");
     
-    //获取到id为time标签中的数字时间
+    // 如果时间等于0，则跳转到指定页面
     if(time.innerHTML == 0){
-      //等于0时清除计时，并跳转该指定页面
       window.location.href="https://music.163.com/#/artist?id=50980005";
     }else{
+      // 否则，时间减少1秒
       time.innerHTML = time.innerHTML-1;
     }
   }
-  //1000毫秒调用一次
-  window.setInterval("countDown()",1000);
+  // 每1000毫秒（1秒）调用一次 countDown 函数
+  window.setInterval("countDown()", 1000);
 </script>
 <style>
+/* 基本样式 */
 body {
   background-color: black;
   text-align: center;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+/* 不同屏幕尺寸下的样式调整 */
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 1.5em; /* 调整标题字体大小 */
+  }
+
+  p, a {
+    font-size: 1em; /* 调整段落和链接字体大小 */
+  }
+
+  img {
+    width: 150px; /* 调整图片宽度 */
+  }
 }
 </style>
 </head>
 <body>
-
+<!-- 页面内容 -->
 <h1>你来错地方了</h1>
 <p>这是一种基于Github的（预）发布页面。</p>
 <p>将于 <a id="Time" >30</a> 秒后跳转至 网易云音乐 </p>
 <a href="https://music.163.com/#/artist?id=50980005">访问 网易云音乐 页面</a>
 <a href="https://github.com/calcobalt">访问 Github 页面</a>
-<a><br></a>
-<img src="00019.png" alt="头像" style="width:200px">
+<br>
+<img src="00019.png" alt="头像">
 </body>
+</html>
