--- a/index.html
+++ b/index.html
@@ -84,5 +84,6 @@
 <a href="https://github.com/calcobalt">访问 Github 页面</a>
 <br>
 <img src="00308.png" alt="头像" height="200" width="200">
+<a href="https://icp.gov.moe/?keyword=20242027" target="_blank">萌ICP备20242027号</a>
 </body>
 </html>
