--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
   </style>
   </head>
 <body>
+<div style="background-image: url('https://www.dmoe.cc/random.php');"></div>
 <!-- 页面内容 -->
 <h1>你来错地方了</h1>
 <p>CalCobalt的发布页面！</p>
