--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
   window.setInterval("countDown()", 1000);
 </script>
 <style>
+  
   /* 基本样式 */
   body {
+    background-image: url('https://www.dmoe.cc/random.php');
     background-color: black;
     text-align: center;
     color: white;
@@ -76,7 +78,6 @@
   </style>
   </head>
 <body>
-<div style="background-image: url('https://www.dmoe.cc/random.php');"></div>
 <!-- 页面内容 -->
 <h1>你来错地方了</h1>
 <p>CalCobalt的发布页面！</p>
