--- a/index.html
+++ b/index.html
@@ -22,13 +22,23 @@
   window.setInterval("countDown()", 1000);
 </script>
 <style>
-  
+
+a {
+  color: red; /* 将超链接颜色设置为红色 */
+}
+
   /* 基本样式 */
+  .transparent-background {
+    position: relative;
+    background-color: rgba(255, 255, 255, 0.403); /* 半透明背景颜色，透明度为0.5 */
+    padding: 20px;
+    border: 1px solid rgba(0, 0, 0, 0);
+  }
   body {
-    background-image: url('https://www.dmoe.cc/random.php');
+    background-repeat:no-repeat; background-attachment:fixed;background-size:cover;background-image: url(https://www.dmoe.cc/random.php);
     background-color: black;
     text-align: center;
-    color: white;
+    color: rgb(45, 89, 45);
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
@@ -79,13 +89,18 @@
   </head>
 <body>
 <!-- 页面内容 -->
-<h1>你来错地方了</h1>
-<p>CalCobalt的发布页面！</p>
-<p>将于 <a id="Time" >30</a> 秒后跳转至 网易云音乐 </p>
-<a href="https://music.163.com/#/artist?id=50980005">访问 网易云音乐 页面</a>
-<a href="https://github.com/calcobalt">访问 Github 页面</a>
-<br>
-<img src="00308.png" alt="头像" height="200" width="200">
-<a href="https://icp.gov.moe/?keyword=20242027" target="_blank">萌ICP备20242027号</a>
+<div class="transparent-background">
+
+    <h1>你来错地方了</h1>
+    <p>CalCobalt的发布页面！</p>
+    <p>将于 <a id="Time" >30</a> 秒后跳转至 网易云音乐 </p>
+    <a href="https://music.163.com/#/artist?id=50980005">访问 网易云音乐 页面</a>
+    <a href="https://github.com/calcobalt">访问 Github 页面</a>
+    <br>
+    <img src="00308.png" alt="头像" height="200" width="200">
+    <br
+    <a href="https://icp.gov.moe/?keyword=20242027" target="_blank">萌ICP备20242027号</a>
+</div>
+
 </body>
 </html>
