--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ a {
     background-color: black;
     text-align: center;
     color: rgb(45, 89, 45);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Microsoft YaHei, Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
     height: 100vh;
@@ -93,11 +93,13 @@ a {
 
     <h1>你来错地方了</h1>
     <p>CalCobalt的发布页面！</p>
-    <p>将于 <a id="Time" >30</a> 秒后跳转至 网易云音乐 </p>
+    <p>将于 <a id="Time" >60</a> 秒后跳转至 网易云音乐 </p>
+    <br>
     <a href="https://music.163.com/#/artist?id=50980005">访问 网易云音乐 页面</a>
     <a href="https://github.com/calcobalt">访问 Github 页面</a>
     <br>
     <img src="00308.png" alt="头像" height="200" width="200">
+    <p>想办法换个头像...</p>
     <br>
     <a href="https://icp.gov.moe/?keyword=20242027" target="_blank">萌ICP备20242027号</a>
 </div>
