--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ a {
   /* 不同屏幕尺寸下的样式调整 */
   @media screen and (max-width: 1200px) {
     body {
-      background-image: url(https://t.mwm.moe/pc);
+      background-image: url(https://t.mwm.moe/moe);
     }
     h1 {
       font-size: 2rem; /* 在较大屏幕上使用更大的标题字体 */
@@ -60,7 +60,7 @@ a {
   }
   @media screen and (max-width: 768px) {
     body {
-      background-image: url(https://t.mwm.moe/mp);
+      background-image: url(https://t.mwm.moe/moemp);
     }
     h1 {
       font-size: 1.5rem; /* 在中等屏幕上调整标题字体大小 */
@@ -80,7 +80,7 @@ a {
   @media screen and (max-width: 480px) {
     /* 在小屏幕上进一步调整样式 */
     body {
-      background-image: url(https://t.mwm.moe/mp);
+      background-image: url(https://t.mwm.moe/moemp);
     }
     h1 {
       font-size: 1.2rem; /* 在小屏幕上进一步减小标题字体大小 */
@@ -99,7 +99,7 @@ a {
 
   @media screen and (orientation: portrait) {
     body {
-      background-image: url(https://t.mwm.moe/mp);
+      background-image: url(https://t.mwm.moe/moemp);
     }
     h1 {
       font-size: 2.7rem; /* 在竖屏模式下进一步减小标题字体大小 */
