--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ a {
     border: 1px solid rgba(0, 0, 0, 0);
   }
   body {
-    background-repeat:no-repeat; background-attachment:fixed;background-size:cover;background-image: url(https://t.mwm.moe/pc);
+    background-repeat:no-repeat; background-attachment:fixed;background-size:cover;background-image: url(https://t.mwm.moe/moe);
     background-color: black;
     text-align: center;
     color: rgb(45, 89, 45);
